# AdvOfCode23

./: CMakeLists.txt
Day1/: CMakeLists.txt  day1.cpp  day1.hpp  main.cpp  test_day1.cpp
Day2/: CMakeLists.txt  day2.cpp  day2.hpp  main.cpp  test_day2.cpp
Day3/: CMakeLists.txt  day3.cpp  day3.hpp  main.cpp  test2.txt  test_day3.cpp
Day4/: CMakeLists.txt  day4.cpp  day4.hpp  main.cpp  test_day4.cpp
DayTemplate/: CMakeLists.txt  main.cpp  test_dayxx.cpp
